tests/ui/debug-bits-should-be-used.stderr
error: use derive(DebugBits) for structs
 --> tests/ui/debug-bits-should-be-used.rs:5:10
  |
5 | #[derive(Debug)]
  |          ^^^^^

error: use derive(DebugBits) for structs
  --> tests/ui/debug-bits-should-be-used.rs:10:10
   |
10 | #[derive(fmt::Debug)]
   |          ^^^^^^^^^^

error: use derive(DebugBits) for structs
  --> tests/ui/debug-bits-should-be-used.rs:14:10
   |
14 | #[derive(core::fmt::Debug)]
   |          ^^^^^^^^^^^^^^^^

error: use derive(DebugBits) for structs
  --> tests/ui/debug-bits-should-be-used.rs:18:10
   |
18 | #[derive(std::fmt::Debug)]
   |          ^^^^^^^^^^^^^^^

error: use derive(Debug) for enums
  --> tests/ui/debug-bits-should-be-used.rs:23:10
   |
23 | #[derive(DebugBits)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `DebugBits` (in Nightly builds, run with -Z macro-backtrace for more info)
